--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     href="jquery_references/jquery-ui.structure.css">
     <link rel="stylesheet" type="text/css"
     href="jquery_references/jquery-ui.theme.css">
+    <link rel="stylesheet" type="text/css"
+    href="style.css">
 
     <script src="jquery_references/jquery-1.12.2.js"
             type="text/javascript"></script>
